* Bumped Groovy to 4.0.9.
* Bumped GMavenPlus to 2.1.0.

== TinkerPop 3.6.0 (Tinkerheart)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-victorian.png[width=185]

[[release-3-6-3]]
=== TinkerPop 3.6.3 (Release Date: NOT OFFICIALLY RELEASED YET)

This release also includes changes from <<release-3-5-6, 3.5.6>>.

* Refactored `PropertyMapStep` to improve extensibility by providers.
* Fixed bug in grammar that prevented declaration of a `Map` key named `new` without quotes.
* Fixed bug in grammar that prevented parsing of `Map` key surrounded by parenthesis which is allowable in Groovy.
* Fixed bug in `GroovyTranslator` that surrounded `String` keys with parenthesis for `Map` when not necessary.
* Added support to the grammar allowing `List` and `Map` key declarations for `Map` entries.
* Improved performance of comparison (equals) between not compatible types and nulls.
* Introduced `Writing` and `Deleting` marker interfaces to identify whether a step can perform write or delete or both on Graph.
* Added static map capturing possible Traversal steps that shall be added to traversal for a given operator

[[release-3-6-2]]
=== TinkerPop 3.6.2 (Release Date: January 16, 2023)

This release also includes changes from <<release-3-5-5, 3.5.5>>.

* Fixed bug in the Gremlin grammar for parsing of empty queries.
* Provided mechanism for provider plugins to get notified on script/query processing via `GraphManager`.
* Fixed bug in `select()` when using multiple labels.
* Moved Gherkin feature tests to `gremlin-test` resources so that they are more easily referenced by providers.
* Made quality of life changes to semantics for `mergeV/E` based on initial feedback.

==== Bugs
* TINKERPOP-2765 Race condition during script creation when using UnifiedChannelizer
* TINKERPOP-2769 gremlin-server does not reply with a timeout response to all timed out requests