@@ -487,15 +487,13 @@ const gremlins = {
     g_E_sampleX1X_count: [function({g}) { return g.E().sample(1).count() }], 
     g_V_sampleX1X_byXageX_count: [function({g}) { return g.V().sample(1).by("age").count() }], 
     g_V_order_byXnoX_count: [function({g}) { return g.V().order().by("no").count() }], 
-    g_V_EX11X: [function({g, eid11}) { return g.V().E(eid11) }], 
-    g_EX11X_E: [function({g, eid11}) { return g.E(eid11).E() }], 
-    g_V_EXnullX: [function({g}) { return g.V().E(null) }], 
-    g_V_EXlistXnullXX: [function({g, xx1}) { return g.V().E(xx1) }], 
-    g_injectX1X_EX11_nullX: [function({g, eid11}) { return g.inject(1).E(eid11,null) }], 
-    g_injectX1X_coalesceXEX_hasLabelXtestsX_addEXtestsX_from_V_hasXnameX_XjoshXX_toXV_hasXnameX_XvadasXXX: [function({g}) { return g.addV("person").property("name","josh").addV("person").property("name","vadas") }, function({g}) { return g.inject(1).coalesce(__.E().hasLabel("tests"),__.addE("tests").from_(__.V().has("name","josh")).to(__.V().has("name","vadas"))) }, function({g}) { return g.E().hasLabel("tests") }], 
-    g_V_properties_element: [function({g, xx1}) { return g.V(xx1).properties().element().limit(1) }], 
-    g_E_properties_element: [function({g, xx1}) { return g.E(xx1).properties().element().limit(1) }], 
-    g_V_properties_properties_element_element: [function({g, xx1}) { return g.V(xx1).properties().properties().element().element().limit(1) }], 
+    g_VX1X_properties_element: [function({g, v2}) { return g.V(v2).properties().element().limit(1) }], 
+    g_V_properties_element: [function({g}) { return g.V().properties().element() }], 
+    g_V_propertiesXageX_element: [function({g}) { return g.V().properties("age").element() }], 
+    g_EX_properties_element: [function({g, eid11}) { return g.E(eid11).properties().element().limit(1) }], 
+    g_E_properties_element: [function({g}) { return g.E().properties().element() }], 
+    g_VXv7_properties_properties_element_element: [function({g, v7}) { return g.V(v7).properties().properties().element().element().limit(1) }], 
+    g_V_properties_properties_element_element: [function({g, v7}) { return g.V(v7).properties().properties().element().element() }], 
     g_V_elementMap: [function({g}) { return g.V().elementMap() }], 
     g_V_elementMapXname_ageX: [function({g}) { return g.V().elementMap("name","age") }], 
     g_EX11X_elementMap: [function({g, eid11}) { return g.E(eid11).elementMap() }], 
