@@ -469,15 +469,13 @@ world.gremlins = {
     'g_E_sampleX1X_count': [(lambda g:g.E().sample(1).count())], 
     'g_V_sampleX1X_byXageX_count': [(lambda g:g.V().sample(1).by('age').count())], 
     'g_V_order_byXnoX_count': [(lambda g:g.V().order().by('no').count())], 
-    'g_V_EX11X': [(lambda g, eid11=None:g.V().E(eid11))], 
-    'g_EX11X_E': [(lambda g, eid11=None:g.E(eid11).E())], 
-    'g_V_EXnullX': [(lambda g:g.V().E(None))], 
-    'g_V_EXlistXnullXX': [(lambda g, xx1=None:g.V().E(xx1))], 
-    'g_injectX1X_EX11_nullX': [(lambda g, eid11=None:g.inject(1).E(eid11,None))], 
-    'g_injectX1X_coalesceXEX_hasLabelXtestsX_addEXtestsX_from_V_hasXnameX_XjoshXX_toXV_hasXnameX_XvadasXXX': [(lambda g:g.addV('person').property('name','josh').addV('person').property('name','vadas')), (lambda g:g.inject(1).coalesce(__.E().hasLabel('tests'),__.addE('tests').from_(__.V().has('name','josh')).to(__.V().has('name','vadas')))), (lambda g:g.E().hasLabel('tests'))], 
-    'g_V_properties_element': [(lambda g, xx1=None:g.V(xx1).properties().element()[0:1])], 
-    'g_E_properties_element': [(lambda g, xx1=None:g.E(xx1).properties().element()[0:1])], 
-    'g_V_properties_properties_element_element': [(lambda g, xx1=None:g.V(xx1).properties().properties().element().element()[0:1])], 
+    'g_VX1X_properties_element': [(lambda g, v2=None:g.V(v2).properties().element()[0:1])], 
+    'g_V_properties_element': [(lambda g:g.V().properties().element())], 
+    'g_V_propertiesXageX_element': [(lambda g:g.V().properties('age').element())], 
+    'g_EX_properties_element': [(lambda g, eid11=None:g.E(eid11).properties().element()[0:1])], 
+    'g_E_properties_element': [(lambda g:g.E().properties().element())], 
+    'g_VXv7_properties_properties_element_element': [(lambda g, v7=None:g.V(v7).properties().properties().element().element()[0:1])], 
+    'g_V_properties_properties_element_element': [(lambda g, v7=None:g.V(v7).properties().properties().element().element())], 
     'g_V_elementMap': [(lambda g:g.V().elementMap())], 
     'g_V_elementMapXname_ageX': [(lambda g:g.V().elementMap('name','age'))], 
     'g_EX11X_elementMap': [(lambda g, eid11=None:g.E(eid11).elementMap())], 
