@@ -57,6 +57,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 
 This release also includes changes from <<release-3-5-6, 3.5.6>>.
 
+* Fixed bug in `element()` when traversing from edges where bulking was enabled.
 * Refactored `PropertyMapStep` to improve extensibility by providers.
 * Fixed bug in grammar that prevented declaration of a `Map` key named `new` without quotes.
 * Fixed bug in grammar that prevented parsing of `Map` key surrounded by parenthesis which is allowable in Groovy.
